--- a/javascript/index2.html
+++ b/javascript/index2.html
@@ -32,12 +32,12 @@
         }
         #wrap {
             margin: 2vh;
-            border: 8px solid #0e43f1;
+            border: 8px solid #ff9800;
             border-radius: 20px;
             height: 96vh;
         }
         #contents {
-            border: 8px solid #50b5f9;
+            border: 8px solid #ffcc80;
             border-radius: 12px;
             text-align: center;
             padding: 5% 2%;
@@ -49,13 +49,13 @@
         }
         #contents h1 {
             font-family: 'TmonMonsori';
-            color: #0e43f1;
+            color: #ff9800;
             font-size: 8vw;
             text-transform: uppercase;
         }
         #contents p a {
             font-family: 'NEXON Lv1 Gothic OTF';
-            background: #0e43f1;
+            background: #ff9800;
             color: #fff;
             display: inline-block;
             padding: 15px 40px;
@@ -65,27 +65,27 @@
             border: 1px solid #fff;
         }
         #contents p a:hover {
-            border: 1px solid #0e43f1;
+            border: 1px solid #ff9800;
             background-color: #fff;
-            color: #0e43f1;
+            color: #ff9800;
         }
         .menu li {
             display: inline;
         }
         .menu li a {
             font-family: 'NEXON Lv1 Gothic OTF';
-            color: #0e43f1;
-            border: 1px dashed #0e43f1;
+            color: #ff9800;
+            border: 1px dashed #ff9800;
             padding: 10px 30px;
             display: inline-block;
             border-radius: 50px;
             font-size: 16px;
             margin: 4px 1px;
-            box-shadow: inset 0 0 0 #0e43f1;
+            box-shadow: inset 0 0 0 #ff9800;
             transition: all 0.4s;
         }
         .menu li a:hover {
-            box-shadow: inset 0 -100px 0 #0e43f1;
+            box-shadow: inset 0 -100px 0 #ff9800;
             color: #fff;
             border-style: solid;
         }
@@ -181,9 +181,9 @@
         .wrap {
             width: 300px;
             height: 300px;
-            background: #0066ff;
+            background: #ff9800;
             position: relative;
-            box-shadow: 0 -10px 0 0 #0057d9;
+            box-shadow: 0 -10px 0 0 #d37e00;
             border-radius: 50%;
         }
         .body {
@@ -489,7 +489,7 @@
                     </defs>
                 </svg>
             </div>
-            <h1>Javascript</h1>
+            <h1>Jquery</h1>
             <p>
                 <a href="index.html">자바스크립트 레퍼런스 북입니다.</a>
                 <a href="index2.html">제이쿼리 레퍼런스 북입니다.</a>
@@ -506,23 +506,18 @@
 
             <nav class="menu">
                 <ul>
-                    <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
-                    <li><a href="javascriptRefer02.html">데이터 불러오기</a></li>
-                    <li><a href="javascriptRefer03.html">데이터 실행하기</a></li>
-                    <li><a href="javascriptRefer04.html">데이터 제어하기</a></li>
+                    <li><a href="jqueryRefer01.html">선택자</a></li>
+                    <li><a href="jqueryRefer02.html">선택 메서드</a></li>
                 </ul>
                 <ul>
-                    <li><a href="javascriptRefer05.html">문자열 객체</a></li>
-                    <li><a href="javascriptRefer06.html">배열 객체</a></li>
-                    <li><a href="javascriptRefer07.html">날짜 객체</a></li>
-                    <li><a href="javascriptRefer08.html">수학 객체</a></li>
-                    <li><a href="javascriptRefer09.html">브라우저 객체</a></li>
-                    <li><a href="javascriptRefer10.html">요소 객체</a></li>
-                    <li><a href="javascriptRefer11.html">이벤트 객체</a></li>
+                    <li><a href="jqueryRefer03.html">속성 메서드</a></li>
+                    <li><a href="jqueryRefer04.html">조작 메서드</a></li>
+                    <li><a href="jqueryRefer05.html">데이터 메서드</a></li>
+                    <li><a href="jqueryRefer06.html">애니메이션 메서드</a></li>
+                    <li><a href="jqueryRefer07.html">이벤트 메서드</a></li>
                 </ul>
                 <ul>
-                    <li><a href="javascriptRefer12.html">샘플</a></li>
-                    <li><a href="javascriptRefer13.html">알고리즘</a></li>
+                    <li><a href="jqueryRefer08.html">샘플</a></li>
                 </ul>
             </nav>
         </main>
