--- a/javascript/javascriptRefer01.html
+++ b/javascript/javascriptRefer01.html
@@ -240,6 +240,7 @@
         <li><a href="../refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
+        <li><a href="../javascript/index2.html">JQUERY</a></li>
     </ul>
 
     <nav class="menu">
