--- a/javascript/javascriptRefer10.html
+++ b/javascript/javascriptRefer10.html
@@ -326,7 +326,9 @@
     <h2 class="mt20"><a href="index.html">요소 객체</a></h2>
     <div class="list">
         <ol>
-            <li><a href="#sample01">요소 메서드 : </a></li>
+            <li><a href="#sample01">요소 객체 : 선택자 : querySelector()</a></li>
+            <li><a href="#sample01">요소 객체 : 선택자 : querySelectorAll()</a></li>
+            <li><a href="#sample01">요소 객체 : 선택자 : getElementById() : 아이디 선택자</a></li>
         </ol>
     </div>
 
@@ -381,16 +383,7 @@
     <script>
 
         //sample01
-        //01. 날짜 메서드 : getFullYear() : 연도 불러오기
-        // {
-        //     const date = new Date();
-        //     const year = date.getFullYear();
-
-        //     document.querySelector(".sample01_N1").innerHTML = "1";
-        //     document.querySelector(".sample01_Q1").innerHTML = "new Date()";
-        //     document.querySelector(".sample01_M1").innerHTML = ".getFullYear()";
-        //     document.querySelector(".sample01_R1").innerHTML = "지금은 " + year + "년 입니다.";
-        // }
+        //01. 
     </script>
 
 </body>
