--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,94 +8,57 @@
 </head>
 <body>
     <script>
-        function f1(){
-            document.write("함수1<br>");
+        //자바스크립트가 실행되었습니다.
+        //선언적함수
+        function func(){
+            document.write("자바스크립트가 실행되었습니다.<br>");
         }
-        f1();
-
-        let f2=function(){
-            document.write("함수2<br>");
+        func();
+        //익명함수
+        const func1=function(){
+            document.write("자바스크립트가 실행되었습니다.<br>");
         }
-        f2();
-
-        let f3=function(text){
-            document.write(text);
-        }
-        f3("매개변수<br>");
-
-        let f4=function(){
-            let str = "리턴값<br>";
-            return str;
-        }
-        document.write(f4());
-
-        function f5(){
-            document.write("화살표함수 : 선언적 함수<br>");
-        }
-        f5();
-
-        f6 = ()=>{
-            document.write("화살표함수 : 선언적 함수<br>");
-        }
-        f6();
-
-        f7 = (str)=>{
-            document.write(str);
-        }
-        f7("화살표함수 : 매개변수 함수<br>");
-
-        f8 = (str1)=>{
+        func1();
+        //리턴값 함수
+        function func2(){
+            let str1 = "자바스크립트가 실행되었습니다.<br>";
             return str1;
         }
-        document.write(f8("화살표함수 : 리턴값 함수<br>"));
-
-        f9 = str => {
+        document.write(func2());
+        //매개변수 함수
+        function func3(str){
             document.write(str);
         }
-        f9("화살표 함수 : 매개변수 괄호 생략<br>");
+        func3("자바스크립트가 실행되었습니다<br>");
 
-        f10 = str => str;
-        document.write(f10("화살표 함수 : 리턴값 괄호 생략<br>"));
+        //1~10까지 for문 출력
+        for(let i=1; i<=10; i++){
+            document.write(i)
+        };
+        document.write("<br>");
 
-        function f11(str1, str2){
-            document.write(str1+str2);
+        //1~10까지 출력 for, forEach, for in, for of
+        let num=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+
+        for(let i=0; i<num.length; i++){
+            document.write(num[i])
         }
-        f11("함수가"," 실행되었습니다.<br>");
-        f11("함수가1"," 실행되었습니다.1<br>");
-        
-        function f12(str1, str2){
-            document.write(str1+str2);
+        document.write("<br>");
+
+        num.forEach(el => {
+            document.write(el);
+        });
+        document.write("<br>");
+
+        for(let i in num){
+            document.write(num[i]);
         }
+        document.write("<br>");
 
-        let a1 = "함수가";
-        let a2 = " 실행되었습니다.<br>";
-
-        document.write(`${a1}${a2}`);
-        document.write(a1+a2);
-
-        let b = ["Array 함수가", "실행되었습니다.<br>"];
-
-        f12(b[0],b[1]);
-
-        let c = {c:"Obj 함수", d:"실행<br>"};
-
-        f12(c.c,c.d);
-
-        let d =[{a:"배열안에 객체 함수"},{b:"실행<br>"}];
-
-        f12(d[0].a, d[1].b);
-
-        //객체 생성자 함수
-        //특징 : 인스턴스를 생성한 후 호출 시켜줘야 함.
-        function func13(str1, str2){
-            this.str1 = str1;
-            this.str2 = str2;
-            this.result = function(){
-                document.write(str1+str2);
-            }
+        for(let i of num){
+            document.write(i)
         }
-        const info1 = new func13("함수가", "실행ㅇㅇ<br>");
-        info1.result();
+        document.write("<br>");
     </script>
 </body>
 </html>
