--- a/site/cardType.html
+++ b/site/cardType.html
@@ -7,7 +7,7 @@
     <meta name="author" content="kdong">                                                <!-- 누가 만들었는지 -->
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">       <!-- 사이트 설명 -->
     <meta name="keywords" content="크동, 사이트, 웹퍼블리셔, 프론트엔드개발자">          <!-- 키워드 -->
-    <title>CardType01</title>
+    <title>CardType</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/fonts.css">                                    <!-- 폰트설정 css -->
@@ -23,7 +23,7 @@
 <body>
 
     <!-- cardType01 -->
-    <section class="cardType">
+    <!-- <section class="cardType">
         <div class="container">
             <div class="cardType01">
                 <h2>혼술족을 위한 제안</h2>
@@ -77,57 +77,56 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //cardType01 -->
 
     <!-- cardType02 -->
     <section class="cardType">
         <div class="container">
             <div class="cardType02">
-                <h2>혼술족을 위한 제안</h2>
-                <p>분위기를 내고 싶은 당신, 혼술을 하는 당신, 맛있는 술을 마시고 싶은 당신, 여러분을 위해 제안합니다.</p>
+                <h2>웹스토리보이 강의</h2>
+                <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 강의 사이트입니다.</p>
                 <div class="card-wrap">
                     <div class="card">
                         <a href="#">
-                            <img src="img/card04.jpg" alt="소주(燒酒, Soju) 이미지입니다." class="card-img">
-                            <strong class="card-title">소주(燒酒, Soju)</strong>
-                            <span class="card-desc">한국의 술이자 증류주의 한 종류이다. 크게 두 가지 방식이 존재한다.</span>
-                            <span class="card-word">
+                            <img src="img/card04.jpg" alt="이미지입니다.">
+                            <div class="card-title">웹표준 사이트 만들기</div>
+                            <div class="card-desc">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한</div>
+                            <div class="card-word">
                                 <span>site</span>
-                            </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="#">
-                            <img src="img/card05.jpg" alt="맥주(麥酒, Beer) 이미지입니다." class="card-img">
-                            <strong class="card-title">맥주(麥酒, Beer)</strong>
-                            <span class="card-desc">보리를 가공한 맥아를 발효한 술. 알콜은 종류에 따라 도수가 다양하다.</span>
-                            <span class="card-word">
+                            <img src="img/card05.jpg" alt="이미지입니다.">
+                            <div class="card-title">웹표준 사이트 만들기</div>
+                            <div class="card-desc">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한</div>
+                            <div class="card-word">
                                 <span>site</span>
-                            </span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="#"> 
+                            <img src="img/card06.jpg" alt="이미지입니다.">
+                            <div class="card-title">웹표준 사이트 만들기</div>
+                            <div class="card-desc">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한</div>
+                            <div class="card-word">
+                                <span>site</span>
+                            </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="#">
-                            <img src="img/card06.jpg" alt="칵테일(Cocktail) 이미지입니다." class="card-img">
-                            <strong class="card-title">칵테일(Cocktail)</strong>
-                            <span class="card-desc">술과 여러 종류의 음료, 첨가물 등을 섞어 만든 혼합주를 일컫다.</span>
-                            <span class="card-word">
+                            <img src="img/card07.jpg" alt="이미지입니다.">
+                            <div class="card-title">웹표준 사이트 만들기</div>
+                            <div class="card-desc">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한</div>
+                            <div class="card-word">
                                 <span>site</span>
-                            </span>
+                            </div>
                         </a>
                     </div>
-                    <div class="card">
-                        <a href="#">
-                            <img src="img/card07.jpg" alt="보드카(Vodka) 이미지입니다." class="card-img">
-                            <strong class="card-title">보드카(Vodka)</strong>
-                            <span class="card-desc">동유럽 원산의 증류주이다. 러시아어로 물을 뜻하는 'вода 보다’ 유래됨</span>
-                            <span class="card-word">
-                                <span>site</span>
-                            </span>
-                        </a>
-                    </div>
-                    
                 </div>
             </div>
         </div>
