--- a/site/cardType.html
+++ b/site/cardType.html
@@ -133,7 +133,80 @@
         </div>
     </section>
     <!-- //cardType02 -->
-
+    
     <!-- cardType03 -->
+    <section class="cardType">
+        <div class="container">
+            <div class="cardType03">
+                <div class="card-head">
+                    <h2>웹스토리보이 레퍼런스 북</h2>
+                    <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼스 북입니다.</p>
+                    <span class="card-side">
+                        <span>최신순</span>
+                        <span>인기순</span>
+                    </span>
+                </div>
+                <div class="card-wrap">
+                    <div class="card">
+                        <a href="">
+                            <img src="img/card08.jpg" alt="이미지입니다" class="card-img">
+                            <span class="card-aside">
+                                <span class="card-btn">html</span>
+                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
+                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
+                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                </span>
+                                <span class="card-date">2021.04.03</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="">
+                            <img src="img/card09.jpg" alt="이미지입니다" class="card-img">
+                            <span class="card-aside">
+                                <span class="card-btn1">css</span>
+                                <strong class="card-title">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</strong>
+                                <span class="card-desc">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. 웹 페이지의 메인 콘텐츠와 사이드의 정보, 광고 등 부분적인 정보를
+                                                        나타낼 때 사용합니다. &lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. &lt;aside&gt;태그는 웹 페이지의 메인 콘텐츠와
+                                                        관련된 사이드의 저보, 광고 등 부분적인 정보를 나타낼 때 사용합니다.
+                                </span>
+                                <span class="card-date">2021.04.03</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="">
+                            <img src="img/card10.jpg" alt="이미지입니다" class="card-img">
+                            <span class="card-aside">
+                                <span class="card-btn2">javascript</span>
+                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
+                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
+                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                </span>
+                                <span class="card-date">2021.04.03</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="">
+                            <img src="img/card11.jpg" alt="이미지입니다" class="card-img">
+                            <span class="card-aside">
+                                <span class="card-btn3">jquery</span>
+                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
+                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
+                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                </span>
+                                <span class="card-date">2021.04.03</span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //cardType03 -->
 </body>
 </html> 
