--- a/site/cardType.html
+++ b/site/cardType.html
@@ -180,10 +180,10 @@
                             <img src="img/card10.jpg" alt="이미지입니다" class="card-img">
                             <span class="card-aside">
                                 <span class="card-btn2">javascript</span>
-                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
-                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
-                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
-                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                <strong class="card-title">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.</strong>
+                                <span class="card-desc">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. 독립적인 컨텐츠에는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등이
+                                                        있으며, 각각의 컨텐츠에는 제목(&lt;h1&gt;~&lt;h6&gt;)이 표시되어야 합니다. &lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.
+                                                        &lt;article&gt;태그는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등 독립적인 항목을 나타냅니다.
                                 </span>
                                 <span class="card-date">2021.04.03</span>
                             </span>
