--- a/site/cardType.html
+++ b/site/cardType.html
@@ -194,10 +194,9 @@
                             <img src="img/card11.jpg" alt="이미지입니다" class="card-img">
                             <span class="card-aside">
                                 <span class="card-btn3">jquery</span>
-                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
-                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
-                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
-                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                <strong class="card-title">&lt;abbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                <span class="card-desc">&lt;abbr&gt;태그는 줄임말이나 머리글자를 표현하는데 사용합니다. abbr은 abbreviation의 약자로, "약자 또는 생략어"라는 의미를 가집니다.
+                                                        title 속성을 사용하여 전체 단어를 지정 할 수 있으며, &lt;dfn&gt;태그와 같이 사용하여 정의할 수 있습니다.
                                 </span>
                                 <span class="card-date">2021.04.03</span>
                             </span>
