--- a/site/cardType.html
+++ b/site/cardType.html
@@ -142,8 +142,8 @@
                     <h2>웹스토리보이 레퍼런스 북</h2>
                     <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼스 북입니다.</p>
                     <span class="card-side">
-                        <span>최신순</span>
-                        <span>인기순</span>
+                        <span><a href="#">최신순</a></span>
+                        <span><a href="#">인기순</a></span>
                     </span>
                 </div>
                 <div class="card-wrap">
