--- a/site/cardType.html
+++ b/site/cardType.html
@@ -19,6 +19,10 @@
 
     <!-- 파비콘 -->
     <!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->            <!-- 화면 탭의 아이콘(?) -->
+
+    <!-- 나눔스퀘어 웹 폰트 -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
+    <!-- type="text/css" 는 생략 가능 -->
 </head>
 <body>
 
@@ -138,70 +142,70 @@
     <section class="cardType">
         <div class="container">
             <div class="cardType03">
-                <div class="card-head">
-                    <h2>웹스토리보이 레퍼런스 북</h2>
-                    <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼스 북입니다.</p>
-                    <span class="card-side">
-                        <span><a href="#">최신순</a></span>
-                        <span><a href="#">인기순</a></span>
-                    </span>
-                </div>
+                <h2>웹스토리보이 레퍼런스 북</h2>
+                <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼스 북입니다.</p>
+                <span class="popular">
+                    <a href="#">최신순</a>
+                    <a href="#">인기순</a>
+                </span>
                 <div class="card-wrap">
-                    <div class="card">
-                        <a href="">
-                            <img src="img/card08.jpg" alt="이미지입니다" class="card-img">
-                            <span class="card-aside">
-                                <span class="card-btn">html</span>
-                                <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
-                                <span class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
-                                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
-                                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
-                                </span>
-                                <span class="card-date">2021.04.03</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="">
-                            <img src="img/card09.jpg" alt="이미지입니다" class="card-img">
-                            <span class="card-aside">
-                                <span class="card-btn1">css</span>
-                                <strong class="card-title">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</strong>
-                                <span class="card-desc">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. 웹 페이지의 메인 콘텐츠와 사이드의 정보, 광고 등 부분적인 정보를
-                                                        나타낼 때 사용합니다. &lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. &lt;aside&gt;태그는 웹 페이지의 메인 콘텐츠와
-                                                        관련된 사이드의 저보, 광고 등 부분적인 정보를 나타낼 때 사용합니다.
-                                </span>
-                                <span class="card-date">2021.04.03</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="">
-                            <img src="img/card10.jpg" alt="이미지입니다" class="card-img">
-                            <span class="card-aside">
-                                <span class="card-btn2">javascript</span>
-                                <strong class="card-title">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.</strong>
-                                <span class="card-desc">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. 독립적인 컨텐츠에는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등이
-                                                        있으며, 각각의 컨텐츠에는 제목(&lt;h1&gt;~&lt;h6&gt;)이 표시되어야 합니다. &lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.
-                                                        &lt;article&gt;태그는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등 독립적인 항목을 나타냅니다.
-                                </span>
-                                <span class="card-date">2021.04.03</span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="">
-                            <img src="img/card11.jpg" alt="이미지입니다" class="card-img">
-                            <span class="card-aside">
-                                <span class="card-btn3">jquery</span>
-                                <strong class="card-title">&lt;abbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
-                                <span class="card-desc">&lt;abbr&gt;태그는 줄임말이나 머리글자를 표현하는데 사용합니다. abbr은 abbreviation의 약자로, "약자 또는 생략어"라는 의미를 가집니다.
-                                                        title 속성을 사용하여 전체 단어를 지정 할 수 있으며, &lt;dfn&gt;태그와 같이 사용하여 정의할 수 있습니다.
-                                </span>
-                                <span class="card-date">2021.04.03</span>
-                            </span>
-                        </a>
-                    </div>
+                    <ul>
+                        <li class="card">
+                            <a href="#">
+                                <img src="img/card08.jpg" alt="wbr 태그입니다." class="card-img">
+                                <div class="right">
+                                    <em class="card-cate red">HTML</em>
+                                    <strong class="card-title">&lt;wbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                    <div class="card-desc">&lt;wbr&gt;태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는
+                                        단어의 줄 바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄 바꿈
+                                        이나 글자의 줄 바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.
+                                    </div>
+                                    <div class="card-date">2021.04.03</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a href="#">
+                                <img src="img/card09.jpg" alt="aside 태그입니다." class="card-img">
+                                <div class="right">
+                                    <em class="card-cate blue">CSS</em>
+                                    <strong class="card-title">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</strong>
+                                    <div class="card-desc">&lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. 웹 페이지의 메인 콘텐츠와 사이드의 정보, 광고 등 부분적인 정보를
+                                        나타낼 때 사용합니다. &lt;aside&gt;태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. &lt;aside&gt;태그는 웹 페이지의 메인 콘텐츠와
+                                        관련된 사이드의 저보, 광고 등 부분적인 정보를 나타낼 때 사용합니다.
+                                    </div>
+                                    <div class="card-date">2021.04.03</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a href="#">
+                                <img src="img/card10.jpg" alt="article 태그입니다." class="card-img">
+                                <div class="right">
+                                    <em class="card-cate green">JAVASCRIPT</em>
+                                    <strong class="card-title">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.</strong>
+                                    <div class="card-desc">&lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. 독립적인 컨텐츠에는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등이
+                                                    있으며, 각각의 컨텐츠에는 제목(&lt;h1&gt;~&lt;h6&gt;)이 표시되어야 합니다. &lt;article&gt;태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.
+                                                    &lt;article&gt;태그는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등 독립적인 항목을 나타냅니다.
+                                    </div>
+                                    <div class="card-date">2021.04.03</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a href="#">
+                                <img src="img/card11.jpg" alt="abbr 태그입니다." class="card-img">
+                                <div class="right">
+                                    <em class="card-cate red">JQUERY</em>
+                                    <strong class="card-title">&lt;abbr&gt;태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                                    <div class="card-desc">&lt;abbr&gt;태그는 줄임말이나 머리글자를 표현하는데 사용합니다. abbr은 abbreviation의 약자로, "약자 또는 생략어"라는 의미를 가집니다.
+                                                    title 속성을 사용하여 전체 단어를 지정 할 수 있으며, &lt;dfn&gt;태그와 같이 사용하여 정의할 수 있습니다.
+                                    </div>
+                                    <div class="card-date">2021.04.03</div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -209,3 +213,4 @@
     <!-- //cardType03 -->
 </body>
 </html> 
+
