--- a/javascript/javascriptRefer05.html
+++ b/javascript/javascriptRefer05.html
@@ -278,6 +278,7 @@
                 }
                 .viwe th,
                 .view table td {
+                    font-size: 10px;
                     white-space: nowrap;
                     font-weight: normal;
                 }
