--- a/javascript/jqueryRefer01.html
+++ b/javascript/jqueryRefer01.html
@@ -326,7 +326,7 @@
     <div id="wrap">
         <main id="contents">
             <div class="title">
-                <h1><a href="index.html">jQuery 레퍼런스</a></h1>
+                <h1><a href="index.html">선택자</a></h1>
             </div>
 
             <ul class="page">
@@ -353,6 +353,8 @@
                     <li><a href="jqueryRefer08.html">샘플</a></li>
                 </ul>
             </nav>
+
+            <hr>
 
             <div class="table">
                 <table>
