--- a/refer-jquery/index.html
+++ b/refer-jquery/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Reference</title>
+    <title>jQuery Reference</title>
     <style>
         @font-face {
             font-family: 'NEXON Lv1 Gothic OTF';
@@ -491,8 +491,8 @@
             </div>
             <h1>Jquery</h1>
             <p>
-                <a href="index.html">자바스크립트 레퍼런스 북입니다.</a>
-                <a href="index2.html">제이쿼리 레퍼런스 북입니다.</a>
+                <a href="../refer-javascript/index.html">자바스크립트 레퍼런스 북입니다.</a>
+                <a href="../refer-jquery/index.html">제이쿼리 레퍼런스 북입니다.</a>
             </p>
 
             <ul class="page">
