--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -191,7 +191,8 @@
             <li><a href="../index.html">MAIN</a></li>
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
-            <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
+            <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>
+            <li><a href="../refer-jquery/index.html">JQUERY</a></li>
         </ul>
         <!-- <ul class="link">
             <li><a href="../javascript/javascriptSample602-1.html">CSS 속성 첫 글자 검색하기</a></li>
