--- a/refer-javascript/index.html
+++ b/refer-javascript/index.html
@@ -491,8 +491,8 @@
             </div>
             <h1>Javascript</h1>
             <p>
-                <a href="index.html">자바스크립트 레퍼런스 북입니다.</a>
-                <a href="index2.html">제이쿼리 레퍼런스 북입니다.</a>
+                <a href="../refer-javascript/index.html">자바스크립트 레퍼런스 북입니다.</a>
+                <a href="../refer-jquery/index.html">제이쿼리 레퍼런스 북입니다.</a>
             </p>
 
             <ul class="page">
