--- a/index.html
+++ b/index.html
@@ -314,16 +314,37 @@
                         <a href="site/cardType.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">SITE</span>
+                                    <span class="overlay-img-donut">SITE(CARD)</span>
                                     <span class="overlay-text-thumb-donut">사이트 제작</span>
                                     <span class="overlay-text-thumb1-donut">사이트 제작</span>
-                                    <span class="overlay-text-thumb2-donut">SITE</span>
+                                    <span class="overlay-text-thumb2-donut">SITE(CARD)</span>
                                 </div>
                                 <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>SITE</h5>
+                                    <h5>SITE(CARD)</h5>
                                     <p>사이트 제작</p>
-                                    <span>SITE</span>
+                                    <span>SITE(CARD)</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="site/imgType.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">SITE(IMG)</span>
+                                    <span class="overlay-text-thumb-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb1-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb2-donut">SITE(IMG)</span>
+                                </div>
+                                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>SITE(IMG)</h5>
+                                    <p>사이트 제작</p>
+                                    <span>SITE(IMG)</span>
                                 </div>
                             </div>
                         </a> 
