--- a/refer-css/index2.html
+++ b/refer-css/index2.html
@@ -205,6 +205,7 @@
         <section class="refer">
             <h3><a href="index.html">Alphabet</a></h3>
             <h3 class="active"><a href="index2.html">Topics</a></h3>
+            <h3><a href="transform.html">Transform</a></h3>
 
             <ul class="link">
                 <li><a href="#sample01">기본 선택자</a></li>
@@ -222,7 +223,7 @@
             </ul>
 
             <!-- sample01 -->
-            <h4>기본 선택자</h4>
+            <h4>선택자</h4>
             <div id="sample01">
                 <table>
                     <colgroup>
