--- a/site/imgType.html
+++ b/site/imgType.html
@@ -86,6 +86,46 @@
         </div>
     </section>
     <!-- //imgType02 -->
+
+    <!-- imgType03 -->
+    <section class="imgType">
+        <div class="container">
+            <div class="imgType03">
+                <h2>해양레저스포츠! 그 즐거움 속으로</h2>
+                <div class="img-wrap">
+                    <div class="img-card">
+                        <img src="img/img06.jpg" alt="카약 이미지입니다." class="img-img">
+                        <div class="inner1">
+                            <strong class="img-title">카약(kayak)</strong>
+                            <span class="img-desc">원래 에스키모들이 사냥과 교통수단으로 이용하기 위해 짐승의 뼈와 가죽으로 
+                                  배를 만들어 타던것이 기원이다. 양날 노를 사용하는게 특징이다.</span>
+                        </div>
+                    </div>
+                    <div class="img-card">
+                        <div class="inner2">
+                            <div>
+                                <img src="img/img07.jpg" alt="이미지입니다." class="inner-img">
+                                <strong class="inner-title">패들보드</strong>
+                            </div>
+                            <div>
+                                <img src="img/img08.jpg" alt="이미지입니다." class="inner-img">
+                                <strong class="inner-title">래프팅</strong>
+                            </div>
+                            <div>
+                                <img src="img/img09.jpg" alt="이미지입니다." class="inner-img">
+                                <strong class="inner-title">서핑</strong>
+                            </div>
+                            <div>
+                                <img src="img/img10.jpg" alt="이미지입니다." class="inner-img">
+                                <strong class="inner-title">윈드서핑</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //imgType03 -->
     
 
 </body>
