--- a/refer-javascript/test.html
+++ b/refer-javascript/test.html
@@ -8,49 +8,21 @@
 </head>
 <body>
     <script>
-        const obj1={
-            a: 1000,
-            b: 2000,
-            c: 3000
-        }
 
-        document.write(obj1.a);
-        document.write(obj1.b);
-        document.write(obj1.c);
-        let sum=0;
-        for(let i in obj1){
-            sum+=obj1[i];
-        }
-        document.write(sum);
-        document.write(obj1.b+obj1.c);
-        document.write(obj1.a+obj1.c);
-        document.write(obj1.a/obj1.a);
-        document.write(obj1.b/obj1.a);
-        document.write(obj1.c/obj1.a);
-        document.write(Object.keys(obj1));
+    const nicoInfo = {
+            name:"Nico",
+            age:33,
+            gender:"Male",
+            isHandsome:true,
+            favMovies: ["Along the gods", "LOTR", "Oldboy"],
+            favFood: [
+                {name: "Kimchi", fatty: false}, 
+                {name: "Cheese burger", fatty: true}
+            ]
+        };
 
-        document.write("<br>");
-        
-        const obj = [
-            {a: 1000},
-            {a: 2000},
-            {a: 3000},
-        ]
-
-        document.write(obj[0].a);
-        document.write(obj[1].a);
-        document.write(obj[2].a);
-        document.write(obj[0].a+obj[1].a+obj[2].a);
-        document.write(obj[1].a+obj[2].a);
-        document.write(obj[0].a+obj[2].a);
-        document.write(obj[0].a/obj[0].a);
-        document.write(obj[1].a/obj[0].a);
-        document.write(obj[2].a/obj[0].a);
-        // document.write(Object.values(obj));
-
-    const obj2 = [1000, 2000, 3000, "a", "b", "c"]
-    
-    document.write
+        console.log(nicoInfo.favFood[0].name);
+        console.log(nicoInfo.favFood[1]);
 
     </script>
 </body>
