--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> <!-- 제이쿼리 소스 -->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    
     <style>
         /* ex1 */
         .ex1 {
@@ -142,6 +143,26 @@
             margin: 10px;
             border: 5px solid #fff94d;
         }
+
+        /* ex7 */
+        .ex7 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex7 .circle {
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -50px;
+            margin-left: -50px;
+            padding: 10px;
+            border: 2px solid #fff94d;
+        }
     </style>
 </head>
 <body>
@@ -245,69 +266,69 @@
                         <tr>
                             <td class="center" rowspan="6">Dimensions</td>
                             <td>.width()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerWidth()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 안쪽(padding포함, border/margin 불포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerWidth()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 바깥쪽(padding/border/margin 포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.height()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerHeight()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 안쪽(padding포함, border/margin 불포함) 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerHeight()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 바깥쪽(padding/border/margin 포함) 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="5">offset</td>
                             <td>.offset()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 좌표 값(문서를 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.offsetParent()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 좌표 값(부모 위치를 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.position()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 좌표 값(기준점 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.scollLeft()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 가로 스크롤 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.scollTop()</td>
-                            <td></td>
+                            <td>-</td>
                             <td>요소의 세로 스크롤 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="2">Data</td>
                             <td>.data()</td>
-                            <td></td>
+                            <td>-</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>.removeData()</td>
-                            <td></td>
+                            <td>-</td>
                             <td></td>
                         </tr>
                     </tbody>
@@ -607,7 +628,7 @@
 
             <!-- sample06 -->
             <div id="sample06" class="sample">
-                <h2>06. offset(), position()<span class="dot"></span></h2>
+                <h2>06. offset() / position()<span class="dot"></span></h2>
                 <div class="view ex6">
                     <span class="circle circle6"></span>
 
@@ -622,16 +643,16 @@
                 <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     $(".btn6-1").click(function(){
-        $(".text6").text("이 원의 x축 값은 " + $(".circle6").offset().left + "px 입니다.")
+        $(".text6").text("이 원의 x축 값은 " + parseInt($(".circle6").offset().left) + "px 입니다.")
     })
     $(".btn6-2").click(function(){
-        $(".text6").text("이 원의 y축 값은 " + $(".circle6").offset().top + "px 입니다.")
+        $(".text6").text("이 원의 y축 값은 " + parseInt($(".circle6").offset().top) + "px 입니다.")
     })
     $(".btn6-3").click(function(){
-        $(".text6").text("이 원의 x축 값은 " + $(".circle6").position().left + "px 입니다.")
+        $(".text6").text("이 원의 x축 값은 " + parseInt($(".circle6").position().left) + "px 입니다.")
     })
     $(".btn6-4").click(function(){
-        $(".text6").text("이 원의 y축 값은 " + $(".circle6").position().top + "px 입니다.")
+        $(".text6").text("이 원의 y축 값은 " + parseInt($(".circle6").position().top) + "px 입니다.")
     })
 }
 </code></pre>
@@ -639,19 +660,76 @@
             </div>
             <script>
                 $(".btn6-1").click(function(){
-                    $(".text6").text("이 원의 x축 값은 " + $(".circle6").offset().left + "px 입니다.")
+                    $(".text6").text("이 원의 x축 값은 " + parseInt($(".circle6").offset().left) + "px 입니다.")
                 })
                 $(".btn6-2").click(function(){
-                    $(".text6").text("이 원의 y축 값은 " + $(".circle6").offset().top + "px 입니다.")
+                    $(".text6").text("이 원의 y축 값은 " + parseInt($(".circle6").offset().top) + "px 입니다.")
                 })
                 $(".btn6-3").click(function(){
-                    $(".text6").text("이 원의 x축 값은 " + $(".circle6").position().left + "px 입니다.")
+                    $(".text6").text("이 원의 x축 값은 " + parseInt($(".circle6").position().left) + "px 입니다.")
                 })
                 $(".btn6-4").click(function(){
-                    $(".text6").text("이 원의 y축 값은 " + $(".circle6").position().top + "px 입니다.")
+                    $(".text6").text("이 원의 y축 값은 " + parseInt($(".circle6").position().top) + "px 입니다.")
                 })
             </script>
             <!-- //sample06 -->
+            <hr>
+
+            <!-- sample07 -->
+            <div id="sample07" class="sample">
+                <h2>07. offset() / position() 활용<span class="dot"></span></h2>
+                <div class="view ex7">
+                    <span class="circle circle7"></span>
+
+                    <div class="text text7">
+                        <p class="text7-1">offset().left = <span>0</span></p>
+                        <p class="text7-2">offset().top = <span>0</span></p>
+                        <p class="text7-3">position().left = <span>0</span></p>
+                        <p class="text7-4">position().top = <span>0</span></p>
+
+                        <p class="text7-5"></p>
+                    </div>
+                </div>
+                <div class="btn">
+                    <a href="#c" class="btn7-1">원을 드래그하세요!</a>
+                </div>
+                <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    $( ".circle7" ).draggable({
+        start: function() {
+            $(".text7-5").text("드래그가 시작되었습니다.");
+        },
+        drag: function() {
+            $(".text7-1 span").text( parseInt($(".circle7").offset().left) + "px" );
+            $(".text7-2 span").text( parseInt($(".circle7").offset().top) + "px" );
+            $(".text7-3 span").text( parseInt($(".circle7").position().left) + "px" );
+            $(".text7-4 span").text( parseInt($(".circle7").position().top) + "px" );
+        },
+        stop: function() {
+            $(".text7-5").text("드래그가 끝났습니다.");
+        }
+    });
+}
+</code></pre>
+                </div>
+            </div>
+            <script>
+                $( ".circle7" ).draggable({
+                    start: function() {
+                        $(".text7-5").text("드래그가 시작되었습니다.");
+                    },
+                    drag: function() {
+                        $(".text7-1 span").text( parseInt($(".circle7").offset().left) + "px" );
+                        $(".text7-2 span").text( parseInt($(".circle7").offset().top) + "px" );
+                        $(".text7-3 span").text( parseInt($(".circle7").position().left) + "px" );
+                        $(".text7-4 span").text( parseInt($(".circle7").position().top) + "px" );
+                    },
+                    stop: function() {
+                        $(".text7-5").text("드래그가 끝났습니다.");
+                    }
+                });
+            </script>
+            <!-- //sample07 -->
             <hr>
             
         </main>
