--- a/refer-javascript/javascriptRefer12.html
+++ b/refer-javascript/javascriptRefer12.html
@@ -38,39 +38,21 @@
             <li><a href="javascriptRefer06.html">배열 객체</a></li>
             <li><a href="javascriptRefer07.html">날짜 객체</a></li>
             <li><a href="javascriptRefer08.html">수학 객체</a></li>
-            <li><a href="javascriptRefer09.html">브라우저 객체</a></li>
-            <li><a href="javascriptRefer10.html">요소 객체</a></li>
-            <li><a href="javascriptRefer11.html">이벤트 객체</a></li>
-            <!-- <li><a href="javascriptRefer12.html">숫자 객체</a></li> -->
+            <li><a href="javascriptRefer09.html">숫자 객체</a></li>
+            <li><a href="javascriptRefer10.html">브라우저 객체</a></li>
+            <li><a href="javascriptRefer11.html">요소 객체</a></li>
+            <li><a href="javascriptRefer12.html">이벤트 객체</a></li>
         </ul>
         <ul>
-            <li><a href="javascriptRefer12.html">샘플</a></li>
-            <li><a href="javascriptRefer13.html">알고리즘</a></li>
+            <li><a href="javascriptRefer13.html">샘플</a></li>
+            <li><a href="javascriptRefer14.html">알고리즘</a></li>
         </ul>
     </nav>
     
-    <h2 class="mt20"><a href="../refer-css/index.html">CSS 문자열 샘플</a></h2>
+    <h2 class="mt20"><a href="index.html">이벤트 객체</a></h2>
     <div class="list">
         <ol>
-            <li><a href="javascriptSample01.html">CSS 속성 첫 글자만 검색하기 </a><a class="sam" href="javascriptRefer05.html">charAt()</a></li>
-            <li><a href="javascriptSample02.html">CSS 속성 검색하면 설명 보여주기 </a><a class="sam" href="javascriptRefer06.html">find()</a></li>
-            <li><a href="javascriptSample03.html">CSS 속성 정렬하기 </a><a class="sam" href="javascriptRefer06.html">sort()</a></li>
-        </ol>
-    </div>
-
-    <h2 class="mt20"><a href="../refer-html/index.html">HTML 문자열 샘플</a></h2>
-    <div class="list">
-        <ol>
-            <li><a href="javascriptSample04.html">HTML 속성 첫 글자만 검색하기 </a><a class="sam" href="javascriptRefer05.html">charAt()</a></li>
-            <li><a href="javascriptSample05.html">HTML 속성 검색하면 설명 보여주기 </a><a class="sam" href="javascriptRefer06.html">find()</a></li>
-            <li><a href="javascriptSample06.html">HTML 속성 정렬하기 </a><a class="sam" href="javascriptRefer06.html">sort()</a></li> 
-        </ol>
-    </div>
-
-    <h2 class="mt20">날짜 객체 샘플</h2>
-    <div class="list">
-        <ol>
-            <li><a href="javascriptSample07.html">시계 만들기 </a><a class="sam" href="javascriptSample07.html">getHours()</a></li>
+            <li><a href="#sample01">이벤트 메서드 : </a></li>
         </ol>
     </div>
 
