--- a/refer-javascript/javascriptRefer07.html
+++ b/refer-javascript/javascriptRefer07.html
@@ -12,9 +12,10 @@
         integrity="sha512-mIs9kKbaw6JZFfSuo+MovjU+Ntggfoj8RwAmJbVXQ5mkAX5LlgETQEweFPI18humSPHymTb5iikEOKWF7I8ncQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
-<body>
+<body class="body">
 
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
@@ -50,7 +51,7 @@
     </nav>
     
     <h2 class="mt20"><a href="index.html">날짜 객체</a></h2>
-    <div class="list">
+    <div>
         <ol>
             <li><a href="#sample01">날짜 메서드 : getFullYear() : 연도 불러오기</a></li>
             <li><a href="#sample01">날짜 메서드 : getMonth() : 월 불러오기</a></li>
