--- a/class/index.html
+++ b/class/index.html
@@ -71,7 +71,7 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
-                    <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
+                        <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
                 </ul>
             </nav>
         </div>
