--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
-                        <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
+                        <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
                     </ul>
                 </div>
             </div>
@@ -134,9 +134,9 @@
                         <ul>
                             <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
                                         aria-hidden="true"></i><span>twitter</span></a></li>
-                            <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen"
+                            <li><a href="https://codepen.io/kdong1224" target="_blank"><i class="fa fa-codepen"
                                         aria-hidden="true"></i><span>codepen</span></a></li>
-                            <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github"
+                            <li><a href="https://kdong1224.github.io/dothome21/" target="_blank"><i class="fa fa-github"
                                         aria-hidden="true"></i><span>github</span></a></li>
                             <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
                                         class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
@@ -351,6 +351,27 @@
                     </section>
                     <!-- //box -->
 
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="refer-mysql/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">MYSQL</span>
+                                    <span class="overlay-text-thumb-donut">데이터베이스</span>
+                                    <span class="overlay-text-thumb1-donut">데이터베이스</span>
+                                    <span class="overlay-text-thumb2-donut">MYSQL</span>
+                                </div>
+                                <img src="assets/img/svg-lemon.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>MYSQL</h5>
+                                    <p>데이터베이스</p>
+                                    <span>MYSQL</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+
 
 
                 </div>
@@ -369,7 +390,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="http://webstoryboy.co.kr" target="_blank">Webstoryboy</a>
+                        <a href="https://kdong1224.github.io/dothome21/" target="_blank">KDONG</a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
