--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -107,6 +107,7 @@
             padding: 10px;
             margin: 10px;
             border: 5px solid #fff94d;
+            box-sizing: content-box;
         }
 
         /* ex5 */
@@ -245,54 +246,79 @@
                         <tr>
                             <td class="center" rowspan="4">CSS</td>
                             <td>.addClass()</td>
-                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.add()</a></td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample01" target="_blank">.classList.add()</a></td>
                             <td>클래스(active) 추가합니다.</td>
                         </tr>
                         <tr>
                             <td>.removeClass()</td>
-                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.remove()</a></td>
+                            <td><a href="../refer-javascript/javascriptRefer11.htm#sample01l" target="_blank">.classList.remove()</a></td>
                             <td>클래스(active) 삭제합니다.</td>
                         </tr>
                         <tr>
                             <td>.toggleClass()</td>
-                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.toggle()</a></td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample02" target="_blank">.classList.toggle()</a></td>
                             <td>클래스(active)를 추가/삭제합니다.</td>
                         </tr>
                         <tr>
                             <td>.hasClass()</td>
-                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.contains()</a></td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample03" target="_blank">.classList.contains()</a></td>
                             <td>클래스를 찾은 후에 클래스를 제거합니다.</td>
                         </tr>
                         <tr>
-                            <td class="center" rowspan="6">Dimensions</td>
+                            <td class="center" rowspan="11">Dimensions</td>
                             <td>.width()</td>
                             <td>-</td>
-                            <td>요소의 가로 값을 가져오거나 설정합니다.</td>
+                            <td>요소의 가로 값(padding/border/margin 불포함)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerWidth()</td>
-                            <td>-</td>
-                            <td>요소의 안쪽(padding포함, border/margin 불포함) 가로 값을 가져오거나 설정합니다.</td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample04" target="_blank">element.clientWidth</a></td>
+                            <td>요소의 안쪽(padding 포함, border/margin 불포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerWidth()</td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample04" target="_blank">element.offsettWidth</a></td>
+                            <td>요소의 바깥쪽(padding/border 포함, margin 불포함) 가로 값을 가져오거나 설정합니다.</td>
+                        </tr>
+                        <tr>
+                            <td>.outerWidth(true)</td>
                             <td>-</td>
                             <td>요소의 바깥쪽(padding/border/margin 포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.height()</td>
                             <td>-</td>
-                            <td>요소의 세로 값을 가져오거나 설정합니다.</td>
+                            <td>요소의 세로 값(padding/border/margin 불포함)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerHeight()</td>
-                            <td>-</td>
-                            <td>요소의 안쪽(padding포함, border/margin 불포함) 세로 값을 가져오거나 설정합니다.</td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample04" target="_blank">element.clientHeight</a></td>
+                            <td>요소의 안쪽(padding 포함, border/margin 불포함) 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerHeight()</td>
+                            <td><a href="../refer-javascript/javascriptRefer11.html#sample04" target="_blank">element.offsettHeight</a></td>
+                            <td>요소의 바깥쪽(padding/border 포함, margin 불포함) 세로 값을 가져오거나 설정합니다.</td>
+                        </tr>
+                        <tr>
+                            <td>.outerHeight(true)</td>
                             <td>-</td>
                             <td>요소의 바깥쪽(padding/border/margin 포함) 세로 값을 가져오거나 설정합니다.</td>
+                        </tr>
+                        <tr>
+                            <td>$(document).width()</td>
+                            <td>-</td>
+                            <td>문서의 가로 값을 가져오거나 설정합니다.</td>
+                        </tr>
+                        <tr>
+                            <td>$(window)).width()</td>
+                            <td>window.innerWidth()</td>
+                            <td>브라우저의 가로 값을 가져오거나 설정합니다.</td>
+                        </tr>
+                        <tr>
+                            <td>$(window)).height()</td>
+                            <td>window.innerHeight()</td>
+                            <td>브라우저의 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="5">offset</td>
@@ -346,6 +372,7 @@
                     <div><img src="img/image03.jpg" alt="이미지3"></div>
                     <div><img src="img/image04.jpg" alt="이미지4"></div>
                     <div><img src="img/image05.jpg" alt="이미지5"></div> 
+                    <div><img src="img/image06.jpg" alt="이미지6"></div> 
                 </div>
                 <div class="btn">
                     <a href="#c" class="btn1-1">클릭하면 모든 이미지에 클래스(active)를 추가합니다.</a>
@@ -373,6 +400,7 @@
                 });
             </script>
             <!-- //sample01 -->
+            
             <hr>
 
             <!-- sample02 -->
@@ -384,6 +412,7 @@
                     <div><img src="img/image08.jpg" alt="이미지8"></div>
                     <div><img src="img/image09.jpg" alt="이미지9"></div>
                     <div><img src="img/image10.jpg" alt="이미지10"></div> 
+                    <div><img src="img/image01.jpg" alt="이미지1"></div> 
                 </div>
                 <div class="btn">
                     <a href="#c" class="btn2-1">이미지를 클릭하면 클래스(active)를 추가/삭제합니다.</a>
@@ -426,6 +455,7 @@
                     <div class="active"><img src="img/image13.jpg" alt="이미지13"></div>
                     <div class="active"><img src="img/image14.jpg" alt="이미지14"></div>
                     <div><img src="img/image15.jpg" alt="이미지15"></div> 
+                    <div><img src="img/image16.jpg" alt="이미지16"></div> 
                 </div>
                 <div class="btn">
                     <a href="#c" class="btn3-0">리셋</a>
@@ -463,7 +493,7 @@
 
             <!-- sample04 -->
             <div id="sample04" class="sample">
-                <h2>04. width(), innerWidth(), outerWidth(), height(), innerHeight(), outerHeight()<span class="dot"></span></h2>
+                <h2>04. width(), innerWidth(), outerWidth(), outerWidth(true), height(), innerHeight(), outerHeight(), outerHeight(true)<span class="dot"></span></h2>
                 <div class="view ex4">
                     <span class="circle circle4"></span>
 
@@ -473,14 +503,16 @@
                     <a href="#c" class="btn4-1">클릭하면 원의 가로(width)값을 구합니다.</a>
                     <a href="#c" class="btn4-2">클릭하면 원의 가로(innerWidth)값을 구합니다.</a>
                     <a href="#c" class="btn4-3">클릭하면 원의 가로(outerWidth)값을 구합니다.</a>
-                    <a href="#c" class="btn4-4">클릭하면 원의 세로(height)값을 구합니다.</a>
-                    <a href="#c" class="btn4-5">클릭하면 원의 세로(innerHeight)값을 구합니다.</a>
-                    <a href="#c" class="btn4-6">클릭하면 원의 세로(outerHeight)값을 구합니다.</a>
+                    <a href="#c" class="btn4-4">클릭하면 원의 가로(outerWidth(true))값을 구합니다.</a>
+                    <a href="#c" class="btn4-5">클릭하면 원의 세로(height)값을 구합니다.</a>
+                    <a href="#c" class="btn4-6">클릭하면 원의 세로(innerHeight)값을 구합니다.</a>
+                    <a href="#c" class="btn4-7">클릭하면 원의 세로(outerHeight)값을 구합니다.</a>
+                    <a href="#c" class="btn4-8">클릭하면 원의 세로(outerHeight(true))값을 구합니다.</a>
                 </div>
                 <div class="btn">
-                    <a href="#c" class="btn4-7">클릭하면 샘플 박스의 가로 값을 구합니다.</a>
-                    <a href="#c" class="btn4-8">클릭하면 문서(HTML)의 가로 값을 구합니다.</a>
-                    <a href="#c" class="btn4-9">클릭하면 브라우저의 가로 값을 구합니다.</a>
+                    <a href="#c" class="btn4-9">클릭하면 샘플 박스의 가로/세로 값을 구합니다.</a>
+                    <a href="#c" class="btn4-10">클릭하면 문서(HTML)의 가로/세로 값을 구합니다.</a>
+                    <a href="#c" class="btn4-11">클릭하면 브라우저의 가로/세로 값을 구합니다.</a>
                 </div>
                 <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -509,22 +541,28 @@
         demension("가로(outerWidth)", $(".circle4").outerWidth());
     });
     $(".btn4-4").click(function(){
-        demension("세로(height)", $(".circle4").height());
+        demension("가로(outerWidth(true))", $(".circle4").outerWidth(true));
     });
     $(".btn4-5").click(function(){
-        demension("세로(innerHeight)", $(".circle4").innerHeight());
+        demension("세로(height)", $(".circle4").height());
     });
     $(".btn4-6").click(function(){
-        demension("세로(outerHeight)", $(".circle4").outerHeight());
+        demension("세로(innerHeight)", $(".circle4").innerHeight());
     });
     $(".btn4-7").click(function(){
-        $(".text4").text("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다.")
+        demension("세로(outerHeight)", $(".circle4").outerHeight());
     });
     $(".btn4-8").click(function(){
-        $(".text4").text("이 문서의 가로 값은 " + $(document).width() + "px 입니다.")
+        demension("세로(outerHeight(true))", $(".circle4").outerHeight(true));
     });
     $(".btn4-9").click(function(){
-        $(".text4").text("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다.")
+        $(".text4").html("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다. <br>이 샘플 박스의 세로 값은 " + $("#sample04").height() + "px 입니다.")
+    });
+    $(".btn4-10").click(function(){
+        $(".text4").html("이 문서의 가로 값은 " + $(document).width() + "px 입니다. <br>이 문서의 세로 값은 " + $(document).height() + "px 입니다.")
+    });
+    $(".btn4-11").click(function(){
+        $(".text4").html("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다. <br>이 브라우저의 세로 값은 " + $(window).height() + "px 입니다.")
     });
 }
 </code></pre>
@@ -556,22 +594,28 @@
                     demension("가로(outerWidth)", $(".circle4").outerWidth());
                 });
                 $(".btn4-4").click(function(){
-                    demension("세로(height)", $(".circle4").height());
+                    demension("가로(outerWidth(true))", $(".circle4").outerWidth(true));
                 });
                 $(".btn4-5").click(function(){
-                    demension("세로(innerHeight)", $(".circle4").innerHeight());
+                    demension("세로(height)", $(".circle4").height());
                 });
                 $(".btn4-6").click(function(){
-                    demension("세로(outerHeight)", $(".circle4").outerHeight());
+                    demension("세로(innerHeight)", $(".circle4").innerHeight());
                 });
                 $(".btn4-7").click(function(){
-                    $(".text4").text("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다.")
+                    demension("세로(outerHeight)", $(".circle4").outerHeight());
                 });
                 $(".btn4-8").click(function(){
-                    $(".text4").text("이 문서의 가로 값은 " + $(document).width() + "px 입니다.")
+                    demension("세로(outerHeight(true))", $(".circle4").outerHeight(true));
                 });
                 $(".btn4-9").click(function(){
-                    $(".text4").text("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다.")
+                    $(".text4").html("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다. <br>이 샘플 박스의 세로 값은 " + $("#sample04").height() + "px 입니다.")
+                });
+                $(".btn4-10").click(function(){
+                    $(".text4").html("이 문서의 가로 값은 " + $(document).width() + "px 입니다. <br>이 문서의 세로 값은 " + $(document).height() + "px 입니다.")
+                });
+                $(".btn4-11").click(function(){
+                    $(".text4").html("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다. <br>이 브라우저의 세로 값은 " + $(window).height() + "px 입니다.")
                 });
             </script>
             <!-- //sample04 -->
