--- a/refer-javascript/index.html
+++ b/refer-javascript/index.html
@@ -64,11 +64,16 @@
             margin-bottom: 2%;
             border: 1px solid #fff;
         }
-        #contents p a:hover {
+        #contents p a.active {
+            background: #fff;
+            border: 1px solid #0e43f1;
+            color: #0e43f1;
+        }
+        /* #contents p a:hover {
             border: 1px solid #0e43f1;
             background-color: #fff;
             color: #0e43f1;
-        }
+        } */
         .menu li {
             display: inline;
         }
@@ -491,7 +496,7 @@
             </div>
             <h1>Javascript</h1>
             <p>
-                <a href="../refer-javascript/index.html">자바스크립트 레퍼런스 북입니다.</a>
+                <a href="../refer-javascript/index.html" class="active">자바스크립트 레퍼런스 북입니다.</a>
                 <a href="../refer-jquery/index.html">제이쿼리 레퍼런스 북입니다.</a>
             </p>
 
