--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <!-- <section class="color-shape reference">
                         <a href="site/imgType.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -348,7 +348,7 @@
                                 </div>
                             </div>
                         </a> 
-                    </section>
+                    </section> -->
                     <!-- //box -->
 
                     <!-- box -->
